markers and pin and stuff

--- a/public/css/lib/fontello/css/fontello-codes.css
+++ b/public/css/lib/fontello/css/fontello-codes.css
@@ -1,84 +1,84 @@
 
-.icon-add-friend:before { content: '\e800'; } /* '' */
-.icon-arobat:before { content: '\e801'; } /* '' */
-.icon-arrow-left:before { content: '\e802'; } /* '' */
-.icon-arrow-right:before { content: '\e803'; } /* '' */
-.icon-barcode:before { content: '\e804'; } /* '' */
-.icon-bednight-empty:before { content: '\e805'; } /* '' */
-.icon-bell:before { content: '\e806'; } /* '' */
-.icon-bookmark:before { content: '\e807'; } /* '' */
-.icon-bookmark-star:before { content: '\e808'; } /* '' */
-.icon-calendar:before { content: '\e809'; } /* '' */
-.icon-camera:before { content: '\e80a'; } /* '' */
-.icon-cancel:before { content: '\e80b'; } /* '' */
-.icon-chat-bubble:before { content: '\e80c'; } /* '' */
-.icon-chat-bubble-duo:before { content: '\e80d'; } /* '' */
-.icon-chat-read:before { content: '\e80e'; } /* '' */
-.icon-check:before { content: '\e80f'; } /* '' */
-.icon-geoloc:before { content: '\e810'; } /* '' */
-.icon-gender:before { content: '\e811'; } /* '' */
-.icon-forward:before { content: '\e812'; } /* '' */
-.icon-flag:before { content: '\e813'; } /* '' */
-.icon-female:before { content: '\e814'; } /* '' */
-.icon-feather:before { content: '\e815'; } /* '' */
-.icon-facebook:before { content: '\e816'; } /* '' */
-.icon-dj:before { content: '\e817'; } /* '' */
-.icon-drinks:before { content: '\e818'; } /* '' */
-.icon-education:before { content: '\e819'; } /* '' */
-.icon-heart:before { content: '\e81a'; } /* '' */
-.icon-info:before { content: '\e81b'; } /* '' */
-.icon-location-empty:before { content: '\e81c'; } /* '' */
-.icon-mail:before { content: '\e81d'; } /* '' */
-.icon-pause:before { content: '\e81e'; } /* '' */
-.icon-pen:before { content: '\e81f'; } /* '' */
-.icon-pending:before { content: '\e820'; } /* '' */
-.icon-pending-vertical:before { content: '\e821'; } /* '' */
-.icon-pin:before { content: '\e822'; } /* '' */
-.icon-planet:before { content: '\e823'; } /* '' */
-.icon-planet-empty:before { content: '\e824'; } /* '' */
-.icon-switch:before { content: '\e825'; } /* '' */
-.icon-tickets-empty:before { content: '\e826'; } /* '' */
-.icon-twitter:before { content: '\e827'; } /* '' */
-.icon-upload:before { content: '\e828'; } /* '' */
-.icon-user-add:before { content: '\e829'; } /* '' */
-.icon-user-walking:before { content: '\e82a'; } /* '' */
-.icon-users:before { content: '\e82b'; } /* '' */
-.icon-clock:before { content: '\e82c'; } /* '' */
-.icon-gift:before { content: '\e82d'; } /* '' */
-.icon-network:before { content: '\e82e'; } /* '' */
-.icon-search-light:before { content: '\e82f'; } /* '' */
-.icon-star:before { content: '\e830'; } /* '' */
-.icon-party-hat-empty:before { content: '\e831'; } /* '' */
-.icon-newsletter:before { content: '\e832'; } /* '' */
-.icon-gift-empty:before { content: '\e833'; } /* '' */
-.icon-headphones:before { content: '\e834'; } /* '' */
-.icon-cog:before { content: '\e835'; } /* '' */
-.icon-crown:before { content: '\e836'; } /* '' */
-.icon-direction:before { content: '\e837'; } /* '' */
-.icon-clock-empty:before { content: '\e838'; } /* '' */
-.icon-line:before { content: '\e839'; } /* '' */
-.icon-location:before { content: '\e83a'; } /* '' */
-.icon-location-barred:before { content: '\e83b'; } /* '' */
-.icon-main-picture:before { content: '\e83c'; } /* '' */
-.icon-male:before { content: '\e83d'; } /* '' */
-.icon-mask:before { content: '\e83e'; } /* '' */
-.icon-meepass:before { content: '\e83f'; } /* '' */
-.icon-moon:before { content: '\e840'; } /* '' */
-.icon-play:before { content: '\e841'; } /* '' */
-.icon-plus:before { content: '\e842'; } /* '' */
-.icon-pricetag:before { content: '\e843'; } /* '' */
-.icon-pricetag-empty:before { content: '\e844'; } /* '' */
-.icon-question-mark:before { content: '\e845'; } /* '' */
-.icon-refresh:before { content: '\e846'; } /* '' */
-.icon-filters:before { content: '\e847'; } /* '' */
-.icon-telescope:before { content: '\e848'; } /* '' */
-.icon-search-planet:before { content: '\e849'; } /* '' */
-.icon-trash:before { content: '\e84a'; } /* '' */
-.icon-menu:before { content: '\e84b'; } /* '' */
-.icon-code:before { content: '\e84c'; } /* '' */
-.icon-power:before { content: '\e84d'; } /* '' */
-.icon-search-zoom:before { content: '\e84e'; } /* '' */
+.icon-angle-right:before { content: '\e800'; } /* '' */
+.icon-angle-left:before { content: '\e801'; } /* '' */
+.icon-user-walking:before { content: '\e802'; } /* '' */
+.icon-users:before { content: '\e803'; } /* '' */
+.icon-arobat:before { content: '\e804'; } /* '' */
+.icon-arrow-left-rounded:before { content: '\e805'; } /* '' */
+.icon-arrow-left:before { content: '\e806'; } /* '' */
+.icon-arrow-right:before { content: '\e807'; } /* '' */
+.icon-barcode:before { content: '\e808'; } /* '' */
+.icon-bell:before { content: '\e809'; } /* '' */
+.icon-birthday:before { content: '\e80a'; } /* '' */
+.icon-bookmark-star:before { content: '\e80b'; } /* '' */
+.icon-bookmark:before { content: '\e80c'; } /* '' */
+.icon-calendar:before { content: '\e80d'; } /* '' */
+.icon-camera-empty:before { content: '\e80e'; } /* '' */
+.icon-camera:before { content: '\e80f'; } /* '' */
+.icon-cancel:before { content: '\e810'; } /* '' */
+.icon-chat-bubble-duo:before { content: '\e811'; } /* '' */
+.icon-chat-bubble:before { content: '\e812'; } /* '' */
+.icon-check:before { content: '\e813'; } /* '' */
+.icon-cog:before { content: '\e814'; } /* '' */
+.icon-chat-read:before { content: '\e815'; } /* '' */
+.icon-direction:before { content: '\e816'; } /* '' */
+.icon-clock-empty:before { content: '\e817'; } /* '' */
+.icon-education:before { content: '\e818'; } /* '' */
+.icon-facebook:before { content: '\e819'; } /* '' */
+.icon-feather:before { content: '\e81a'; } /* '' */
+.icon-female:before { content: '\e81b'; } /* '' */
+.icon-filters:before { content: '\e81c'; } /* '' */
+.icon-flag:before { content: '\e81d'; } /* '' */
+.icon-forward:before { content: '\e81e'; } /* '' */
+.icon-gender:before { content: '\e81f'; } /* '' */
+.icon-geoloc:before { content: '\e820'; } /* '' */
+.icon-clock:before { content: '\e821'; } /* '' */
+.icon-code:before { content: '\e822'; } /* '' */
+.icon-heart:before { content: '\e823'; } /* '' */
+.icon-info:before { content: '\e824'; } /* '' */
+.icon-line:before { content: '\e825'; } /* '' */
+.icon-location-barred:before { content: '\e826'; } /* '' */
+.icon-location:before { content: '\e827'; } /* '' */
+.icon-headphones:before { content: '\e828'; } /* '' */
+.icon-gift:before { content: '\e829'; } /* '' */
+.icon-mail-1:before { content: '\e82a'; } /* '' */
+.icon-main-picture:before { content: '\e82b'; } /* '' */
+.icon-male:before { content: '\e82c'; } /* '' */
+.icon-mask:before { content: '\e82d'; } /* '' */
+.icon-meepass:before { content: '\e82e'; } /* '' */
+.icon-members:before { content: '\e82f'; } /* '' */
+.icon-menu-app:before { content: '\e830'; } /* '' */
+.icon-menu:before { content: '\e831'; } /* '' */
+.icon-moon:before { content: '\e832'; } /* '' */
+.icon-network:before { content: '\e833'; } /* '' */
+.icon-newsletter:before { content: '\e834'; } /* '' */
+.icon-pen:before { content: '\e835'; } /* '' */
+.icon-pending-vertical:before { content: '\e836'; } /* '' */
+.icon-meedrink:before { content: '\e837'; } /* '' */
+.icon-pin:before { content: '\e838'; } /* '' */
+.icon-planet-empty:before { content: '\e839'; } /* '' */
+.icon-dj:before { content: '\e83a'; } /* '' */
+.icon-play:before { content: '\e83b'; } /* '' */
+.icon-plus:before { content: '\e83c'; } /* '' */
+.icon-pricetag:before { content: '\e83d'; } /* '' */
+.icon-profile-rounded:before { content: '\e83e'; } /* '' */
+.icon-question-mark:before { content: '\e83f'; } /* '' */
+.icon-refresh:before { content: '\e840'; } /* '' */
+.icon-search-light:before { content: '\e841'; } /* '' */
+.icon-search-planet:before { content: '\e842'; } /* '' */
+.icon-search-zoom:before { content: '\e843'; } /* '' */
+.icon-star:before { content: '\e844'; } /* '' */
+.icon-switch:before { content: '\e845'; } /* '' */
+.icon-telescope:before { content: '\e846'; } /* '' */
+.icon-thunder-left:before { content: '\e847'; } /* '' */
+.icon-thunder-right:before { content: '\e848'; } /* '' */
+.icon-trash:before { content: '\e849'; } /* '' */
+.icon-twitter:before { content: '\e84a'; } /* '' */
+.icon-upload:before { content: '\e84b'; } /* '' */
+.icon-crown:before { content: '\e84c'; } /* '' */
+.icon-planet:before { content: '\e84d'; } /* '' */
+.icon-pending:before { content: '\e84e'; } /* '' */
 .icon-angle-up:before { content: '\e84f'; } /* '' */
 .icon-angle-down:before { content: '\e850'; } /* '' */
-.icon-down-dir:before { content: '\e851'; } /* '' */
-.icon-up-dir:before { content: '\e852'; } /* '' */
+.icon-match:before { content: '\e851'; } /* '' */
+.icon-power:before { content: '\e852'; } /* '' */
