--- a/public/css/src/friends/friends.css
+++ b/public/css/src/friends/friends.css
@@ -22,6 +22,10 @@
     background: #f9f9f9;
 }
 
+.friend__item:hover i{
+    color: #1b69ec;
+}
+
 .friend__item:last-of-type {
     border-bottom: none;
     display: none;
@@ -166,7 +170,7 @@
 }
 
 .invite-friends-popup__icon {
-    font-size: 27px;
+    font-size: 22px;
     background: white;
     width: 50px;
     height: 50px;
