--- a/public/css/src/map/map.css
+++ b/public/css/src/map/map.css
@@ -23,13 +23,18 @@
 .map__icon.--geoloc,
 .map__icon.--change-location {
     bottom: 30px;
-    font-size: 30px;
+    font-size: 22px;
     cursor: pointer;
     background: #ffffff;
     color: #1b69ec;
-    border: 2px solid;
+    /* border: 2px solid; */
     width: 50px;
     height: 50px;
+}
+
+.map__icon.--geoloc:hover,
+.map__icon.--change-location:hover {
+    color: #508aea;
 }
 
 .map__icon.--change-location {
